# hermes-bort

./: .gitignore  LICENSE  README.md  pyproject.toml
hermes_bort/: __init__.py  action_codec.py  approval.py  bort_api.py  bort_chain.py  bort_ipfs.py  bort_kr.py  bort_logic_adapters.py  bort_marketplace.py  bort_policy.py  bort_sanitize.py  bort_signer.py  cli.py  evolution_loop.py  plugin.yaml
hermes_bort/memory/: __init__.py  provider.py
hermes_bort/tools/: __init__.py  anchor_memory.py  commit_evolution.py  commit_learning.py  grant_permission.py  health_check.py  invoke.py  list_actions.py  list_agent_uri.py  marketplace_agent.py  marketplace_browse.py  read_agent.py
tests/: test_action_codec.py  test_anchor_evolution_tools.py  test_approval.py  test_bort_kr.py  test_cli.py  test_commit_learning.py  test_evolution_loop.py  test_grant_permission.py  test_health_check.py  test_invoke.py  test_ipfs_pin.py  test_marketplace_tools.py  test_plugin_integration.py  test_policy.py  test_read_agent.py  test_sanitize.py  test_signer.py
