[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-bort"
version = "0.1.0"
description = "BORT (BAP-578) integration plugin for Hermes Agent"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "BORT Agents", email = "support@bortbsc.xyz"}]
requires-python = ">=3.10"
keywords = [
    "hermes-agent", "hermes", "plugin", "bap-578", "nfa",
    "bnb-chain", "bsc", "agent-nft", "web3", "blockchain", "ipfs",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "web3>=6.20",
    "httpx>=0.26",
    "eth-account>=0.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://www.bortagent.xyz/"
Repository = "https://github.com/BORT-AGENTS/hermes-bort"
Issues = "https://github.com/BORT-AGENTS/hermes-bort/issues"
"Android App" = "https://play.google.com/store/apps/details?id=com.bort.dapp"
Twitter = "https://x.com/BortOnBsc"

[project.entry-points."hermes_agent.plugins"]
hermes-bort = "hermes_bort"

[tool.setuptools.packages.find]
where = ["."]
include = ["hermes_bort*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
